feat(blog): update blog

--- a/pages/2022/jabuticaba-doing-business-abroad.mdx
+++ b/pages/2022/jabuticaba-doing-business-abroad.mdx
@@ -7,12 +7,36 @@ export default function ({ children }) {
   return <Post 
     id="jabuticaba-doing-business-abroad"
     title="Jabuticaba: Doing Business Abroad"
-    description="Jabuticaba tree a unique tree with equality different fruits that alegelly only grows in brazil can teach a lot about doing business abroad"
+    description="Jabuticaba tree a unique tree with equality different fruits that alegelly only grows in brazil can teach a lot about doing business"
     date="Nov 2, 2022"
   >{children}</Post>
 }
 
-**Jabuticaba** In Brazilian politics, and less commonly in everyday speech, *Jabuticaba* is a slang that describes a political or legal setting that is considered absurd, unusual, or needlessly complex, among others, that could only exist in a country like Brazil. It is a reference to the popular wisdom that jabuticaba trees can only grow in Brazil. 
+In Brazilian business jargon, the term "Jabuticaba" is used to describe a political or legal situation that is considered absurd, overly complex, or needlessly convoluted. 
+The term is rooted in the popular belief that Jabuticaba trees, a fruit-bearing plant native to Brazil, can only grow in the country's unique environment. 
+Thus, the term "Jabuticaba" has come to symbolize the idea that certain situations or systems in Brazil are so uniquely Brazilian that they cannot be fully understood or appreciated outside of the country's cultural context. 
+<br/>
+
+
+Jabuticaba Trees are indeed truly unique and serves as an perfect example to ackwarnedss faced when doing businesses abroad. 
+Any foreign facing a Jabuticaba tree for the first time will have a hard time trying to understand it; The fruits are pitch black, grow directly from main branches and look poisonous. 
+You can't bite the fruit all at once, otherwise you'll have to deal with the bitter taste of fruit rind. 
+You can't peal it, and you can't just eat it all at once; You give a gentle bite, eat just the pulp and spit out the rest. And remember: Never chew it.
+But trust me, Jabuticabas are unique and delicious. 
+<br/>
+
+Jabuticaba tree and its fruit are a perfect example of the uniqueness and complexity that is so often associated with Brazil. Like the political and legal situations that are described as 'Jabuticaba' in Brazilian business jargon, the Jabuticaba tree can only thrive in Brazil's distinct environment, and its fruit is often misunderstood by those who are unfamiliar with it. 
+
+<br/>
+
+<br/>
+By embracing the complexity and uniqueness of the Jabuticaba, we can better understand and appreciate the complexity and uniqueness of the Brazilian culture and business landscape.
+
+<br/>
+
+
+<br/>
+
 
  [Series B last December](/2020/next-for-vercel), I'm happy to announce we've raised a [**$102M Series C**](https://techcrunch.com/2021/06/23/vercel-raises-102m-series-c-for-its-next-js-based-front-end-development-platform) from existing and new investors.
 
@@ -75,5 +99,37 @@ we make. To name some examples:
 Our primary fitness function is your success for your customers. Not
 every visitor might understand fully how every page is built, but if the
 experience is delightful and fast, they ought to think it was powered by Vercel.
+
+
+As the world becomes more connected, doing business across borders is becoming increasingly common. While it can be exciting to explore new markets and opportunities, it can also be daunting to navigate the cultural, social, and economic differences that come with doing business abroad.
+<br/>
+
+One of the most important things to keep in mind when doing business abroad is that other countries are not worse or better than your own country, they are simply different. Each country has its own unique history, culture, and business practices, and it is important to understand and respect these differences in order to succeed in international business.
+<br/>
+
+
+Take for example the Jabuticaba tree, a somewhat awkward Brazilian tree. This tree is a perfect example of the importance of embracing diversity when doing business abroad. In Brazil, the Jabuticaba tree is a common sight, and its fruit is a beloved delicacy. However, in other parts of the world, the Jabuticaba tree is unknown and may even be seen as odd or unattractive.
+<br/>
+
+
+Similarly, business practices that are common and accepted in one country may be completely foreign or even offensive in another. For example, in some cultures, it is customary to take time to build relationships and establish trust before discussing business, while in others, direct and immediate negotiations are the norm.
+<br/>
+
+
+To successfully navigate these differences, it is essential to do your research and seek out cultural training and resources. This includes learning about local customs, language, and business practices. It also means being open-minded and adaptable, and willing to learn from and respect the differences you encounter.
+<br/>
+
+
+One way to embrace diversity when doing business abroad is to seek out local partners or advisors who can help guide you through the cultural nuances and expectations. This can include hiring local staff, partnering with local businesses, or working with cultural consultants.
+<br/>
+
+
+Another important factor to consider is communication. When doing business across borders, language barriers can be a significant obstacle. It is important to ensure that all parties involved have a clear understanding of the goals, expectations, and requirements of the project or partnership. This may involve using translation services, hiring bilingual staff, or investing in language training for employees.
+<br/>
+
+
+In summary, doing business abroad requires a deep understanding and respect for cultural differences. Embracing diversity and seeking out local knowledge and expertise can help bridge the gap and build strong, successful international partnerships. And just like the Jabuticaba tree, what may seem awkward or unfamiliar at first can ultimately lead to new opportunities and growth.
+<br/>
+
 
 <H2 id="real">4. Relentless passion</H2>
