feat(blog): post fixes

--- a/pages/2022/jabuticaba-doing-business-abroad.mdx
+++ b/pages/2022/jabuticaba-doing-business-abroad.mdx
@@ -14,7 +14,7 @@ export default function ({ children }) {
 
 In Brazilian business jargon, the term "Jabuticaba" is used to describe a political or legal situation that is considered absurd, overly complex, or needlessly convoluted. 
 The term is rooted in the popular belief that Jabuticaba trees, a fruit-bearing plant native to Brazil, can only grow in the country's unique environment. 
-Thus, the term "Jabuticaba" has come to symbolize the idea that certain situations or systems in Brazil are so uniquely Brazilian that they cannot be fully understood or appreciated outside of the country's cultural context. 
+Thus, the term "Jabuticaba" has come to symbolize the idea that certain situations or systems in Brazil are so uniquely Brazilian that they cannot be fully understood or appreciated outside of the country's context. 
 <br/>
 
 
@@ -38,7 +38,7 @@ By embracing the complexity and uniqueness of the Jabuticaba, we can better unde
 <br/>
 
 
- [Series B last December](/2020/next-for-vercel), I'm happy to announce we've raised a [**$102M Series C**](https://techcrunch.com/2021/06/23/vercel-raises-102m-series-c-for-its-next-js-based-front-end-development-platform) from existing and new investors.
+I'm happy to announce we've raised a from existing and new investors.
 
 Our vision of the Web is a global realtime medium for both creators and consumers,
 where all friction and latency are eliminated.
