feat(ui): improve ui

--- a/pages/posts/chief-unblocking-officer.mdx
+++ b/pages/posts/chief-unblocking-officer.mdx
@@ -2,8 +2,8 @@ import Post from "../../components/layouts/post";
 
 export const meta = {
   title: "Chief Unblocking Officer",
-  description: "CUO - The future of true leadership",
-  date: new Date(2022, 10, 2), // 2022-11-02
+  description: "CEO - The future of true leadership, Chief Unblocking Officer",
+  date: new Date(2022, 9, 2), // 2022-11-02
 }
 
 **Intel** once the world's largest chipmaker for more than 30 years, has been dethroned from its position. Manufacturing delays, failure to enter the mobile chips market, and losing market share in the PC and data centre segment to competitors.
