--- a/pages/posts/jabuticaba-doing-business-abroad.mdx
+++ b/pages/posts/jabuticaba-doing-business-abroad.mdx
@@ -2,9 +2,35 @@ import Post from "../../components/layouts/post";
 
 export const meta = {
   title: "Jabuticaba: Doing Business Abroad",
-  description: "Jabuticaba tree a unique tree with equality different fruits that alegelly only grows in brazil can teach a lot about doing business abroad",
-  date: new Date(2022, 10, 2), // 2022-11-02
+  description: "Jabuticaba tree a unique tree with equality different fruits that alegelly only grows in brazil can teach a lot about doing business",
+  date: new Date(2022, 10, 2), 
 }
+
+In Brazilian business jargon, the term "Jabuticaba" is used to describe a political or legal situation that is considered absurd, overly complex, or needlessly convoluted. 
+The term is rooted in the popular belief that Jabuticaba trees, a fruit-bearing plant native to Brazil, can only grow in the country's unique environment. 
+Thus, the term "Jabuticaba" has come to symbolize the idea that certain situations or systems in Brazil are so uniquely Brazilian that they cannot be fully understood or appreciated outside of the country's context. 
+<br/>
+
+Jabuticaba Trees are indeed truly unique and serves as an perfect example to ackwarnedss faced when doing businesses abroad. 
+Any foreign facing a Jabuticaba tree for the first time will have a hard time trying to understand it; The fruits are pitch black, grow directly from main branches and look poisonous. 
+You can't bite the fruit all at once, otherwise you'll have to deal with the bitter taste of fruit rind. 
+You can't peal it, and you can't just eat it all at once; You give a gentle bite, eat just the pulp and spit out the rest. And remember: Never chew it.
+But trust me, Jabuticabas are unique and delicious. 
+<br/>
+
+Jabuticaba tree and its fruit are a perfect example of the uniqueness and complexity that is so often associated with Brazil. Like the political and legal situations that are described as 'Jabuticaba' in Brazilian business jargon, the Jabuticaba tree can only thrive in Brazil's distinct environment, and its fruit is often misunderstood by those who are unfamiliar with it. 
+
+<br/>
+
+<br/>
+By embracing the complexity and uniqueness of the Jabuticaba, we can better understand and appreciate the complexity and uniqueness of the Brazilian culture and business landscape.
+
+<br/>
+
+
+<br/>
+
+------------------
 
 **Jabuticaba** In Brazilian politics, and less commonly in everyday speech, *Jabuticaba* is a slang that describes a political or legal setting that is considered absurd, unusual, or needlessly complex, among others, that could only exist in a country like Brazil. It is a reference to the popular wisdom that jabuticaba trees can only grow in Brazil. 
 
@@ -69,5 +95,6 @@ every visitor might understand fully how every page is built, but if the
 experience is delightful and fast, they ought to think it was powered by Vercel.
 
 ## 4. Relentless passion
+
 
 export default ({ children }) => <Post meta={meta}>{children}</Post>;
