--- a/pages/posts/making-the-web-faster.mdx
+++ b/pages/posts/making-the-web-faster.mdx
@@ -1,3 +1,5 @@
+import Post from "../../components/layouts/post";
+
 export const meta = {
   title: "Making the Web. Faster",
   description: "Vercel is making a faster platform for those consuming the web and faster for those building for the web. And now that's more than just developers.",
@@ -20,57 +22,11 @@ We'll use this investment to:
 
 Unlike other software development platforms, the Web never came with an SDK or Standard Development Kit.
 
-While new browser APIs are constantly being added, the responsibility still falls on the developer to assemble them into an _engine_ for every new project.
+While new browser APIs are constantly being added, 
+the responsibility still falls on the developer to assemble them into an _engine_ for every new project.
 
 The resulting diversity of tools and choices makes the Web the innovative and dynamic
 medium that it is, but it can also be a major obstacle, as companies rally 
 to reinvent themselves in the digital medium.
-
-React, [now 8 years old](https://reactjs.org/blog/2013/06/05/why-react.html), has proven to be a durable abstraction and [building block](https://twitter.com/rauchg/status/1068183829737664512?lang=en), a narrative violation of the common wisdom that "frontend frameworks are changed every week."
-
-Next.js builds on this formidable foundation to give developers and companies
-a meaningful starting point to build great pages, [open sourcing the lessons](https://nextjs.org/blog/next-11#conformance) learned from the giants of the Web.
-
-
-## 2. Lower the barrier of entry
-
-Vercel [has](https://twitter.com/bobfmuller/status/1404795808525004805) [given](https://twitter.com/erikras/status/1382420067485417477) [developers](https://twitter.com/otpfy/status/1380458535356669953) access to global infrastructure to
-deploy and scale frontend projects. But significant challenges remain to
-frictionless collaboration:
-
-- Setting up and maintaining your developer environment
-- Integrating it into Git for continuous integration
-- Manually pushing and waiting to share progress with your team
-
-
-Perhaps the most incredible aspect of the Web is that it's not a read-only medium.
-Each Web browser is simultaneously the [consumption and creation mechanism](https://twitter.com/sulco/status/1177559150563344384).
-
-With [Next.js Live](https://nextjs.org/live), we want to build a Web that 
-everyone can contribute to. Whether it's to pitch in an idea or an edit,
-by an experienced developer or a new designer, from a local editor or the
-browser itself.
-
-## 3. Focus on the end-user
-
-A particularly interesting challenge of building a platform and tooling 
-company is that you have **two users** (whether it's acknowledged or not):
-
-1. The user of the tool
-2. The user of the output of the tool
-
-No matter how many downloads Next.js gets, or how delightful and 
-realtime the development experience, a universal truth remains: **[the customer is king](https://en.wikipedia.org/wiki/The_customer_is_always_right)**.
-
-Performance for the end-user has been baked in the design of everything
-we make. To name some examples:
-
-- Next.js was born out of the insight that React in its initial Single Page Application presentation was putting the rendering burden on the user's device that should have been on the [server](https://reactjs.org/blog/2020/12/21/data-fetching-with-react-server-components.html) instead. 
-- [Vercel Analytics](https://vercel.com/analytics) prioritized giving you a Real Experience Score calculated by each device, rather than just listing traffic stats or TTFB latencies.
-- Pre-rendering at build time or via [Incremental Static Regeneration](https://www.smashingmagazine.com/2021/04/incremental-static-regeneration-nextjs/) is all about [taking the CPU cycles entirely out](/2020/static-hoisting#hoist-to-the-edge) of the page serving equation, removing latency for the end user.
-
-Our primary fitness function is your success for your customers. Not
-every visitor might understand fully how every page is built, but if the
-experience is delightful and fast, they ought to think it was powered by Vercel.
 
 export default ({ children }) => <Post meta={meta}>{children}</Post>;
